# vani_makemytrip_backend

./: .dockerignore  .env.example  BACKEND_AGENT.md  CLAUDE.md  Dockerfile  FRONTEND_AGENT.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml  run_both.sh  server_run.py  skills-lock.json
.agents/skills/openui/: SKILL.md
app/: agent.py  api.py  config.py  context.py  main.py
app/agent/: __main__.py  instructions.py  makemytrip_ui.py  openui_build.py  openui_prompt.py  openui_render.py  travel_data.py  worker.py
app/api/: schemas.py
app/api/routes/: health.py  token.py
app/core/: config.py  exceptions.py  responses.py
app/services/: context.py  livekit.py
tests/: test_instructions.py  test_show_dispatch.py
